--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
 </div>
 </div>
 <script type="text/javascript" src="js.js"></script>
+<div id="milk" style="position: absolute;bottom: 10px;right: 10px;">made by <strong>MILK</strong></div>
 </body>
 </html>
