--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
+<%@page import="java.io.*"%>
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta charset="UTF-8">
 <title>시계</title>
 <link href="css.css" rel="stylesheet">
 </head>
 <body>
+<img id="background" src="img.jpg" alt="background">
 <div class="clock">
 <div class="hour">
 <div class="hr" id="hr"></div>	
@@ -17,7 +20,7 @@
 <div class="sec">
 <div class="sc" id="sc"></div>
 </div>
-</div>
+</div>`
 <script type="text/javascript" src="js.js"></script>
 <div id="milk" style="position: absolute;bottom: 10px;right: 10px;">made by <strong>MILK</strong></div>
 </body>
