--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="sec">
 <div class="sc" id="sc"></div>
 </div>
-</div>`
+</div>
 <script type="text/javascript" src="js.js"></script>
 <div id="milk" style="position: absolute;bottom: 10px;right: 10px;">made by <strong>MILK</strong></div>
 </body>
