--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 </div>
 </div>
 <script type="text/javascript" src="js.js"></script>
-<div id="milk" style="position: absolute;bottom: 10px;right: 10px;z-index: 10000;">made by <strong>MILK</strong></div>
+<div id="milk" style="position: fixed;bottom: 10px;right: 10px;z-index: 10000;" onclick="location.href = 'https://www.youtube.com/channel/UCqlypMURlP7l6334cdwWaBw'">made by <strong>MILK</strong></div>
 </body>
 </html>
